# new-stock-crawler

./: .dockerignore  .env.example  .gitignore  COMMIT_MSG.tmp  Dockerfile  Justfile.linux  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: daily_crawl.yml  health_check.yml
src/: cli.py  config.py  main.py
src/core/ports/: data_ports.py  enrichment_ports.py  ports.py  storage_ports.py  utility_ports.py  web_scraping_ports.py
src/core/services/: crawler_service.py  enrichment_service.py
src/domain/: models.py  ports.py
src/infra/adapters/: dataframe_adapter.py  excel_persistence_adapter.py  playwright_adapter.py
src/infra/adapters/data/: dataframe_mapper.py  excel_exporter.py
src/infra/adapters/parsers/: calander_parser.py  detail_parser.py
src/infra/adapters/parsing/: __init__.py
src/infra/adapters/parsing/html/: __init__.py  strategies.py  table_grid_builder.py
src/infra/adapters/parsing/text/: __init__.py  parsers.py
src/infra/adapters/storage/: google_drive_adapter.py
src/infra/adapters/utils/: console_logger.py
src/infra/adapters/web/: calendar_scraper_adapter.py  calendar_scraper_impl.py  detail_scraper_adapter.py  detail_scraper_impl.py  playwright_page_provider.py
src/interface/cli/: main.py
src/interface/cli/commands/: auth.py  daily_update.py  enrich_data.py  full_crawl.py  health.py
tests/integration/: test_crawler_service.py
tests/unit/adapters/data/: test_dataframe_mapper.py  test_excel_persistence_adapter.py
tests/unit/adapters/parsing/: test_text_parsers.py
