[project]
name = "new-stock-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "finance-datareader>=0.9.96",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.12.0",
    "pykrx>=1.0.51",
    "pytest>=9.0.1",
    "setuptools>=80.9.0",
    "typer>=0.9.0",
]

[project.scripts]
crawler = "cli:app"

[dependency-groups]
dev = [
    "radon>=6.0.1",
    "pytest-cov>=6.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
